enhence ui of portfolio

--- a/index.html
+++ b/index.html
@@ -571,8 +571,8 @@
                 <br> "Trade Simplified. Growth Amplified!". <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <div class="d-flex">
-                <i class="fa-brands fa-laravel" style="color: #b20969;"></i> +
-                <i class="fa-brands fa-php" style="color: #14aae6;"></i> +
+                <i class="fa-brands fa-laravel" style="color: #b20969;"></i>
+                <i class="fa-brands fa-php" style="color: #14aae6;"></i>
                 <img src="https://upload.wikimedia.org/wikipedia/en/d/dd/MySQL_logo.svg" alt="MySQL" width="30"
                   height="30" />
               </div>
@@ -590,11 +590,11 @@
                 Pharmacy,specially made for the Client. <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <div class="d-flex">
-                <img class="postman" src="assets/img/portfolio/mongodb.png" style="color: #09b228;" alt=""> +
+                <img class="postman" src="assets/img/portfolio/mongodb.png" style="color: #09b228;" alt="">
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/express.svg" alt="Express.js" width="20"
-                  height="20" style="background-color: #fff;" />+
-                <i class="fa-brands fa-react" style="color: #1985dd;"></i> +
-                <i class="fa-brands fa-node-js" style="color: #09b228;"></i> +
+                  height="20" style="background-color: #fff;" />
+                <i class="fa-brands fa-react" style="color: #1985dd;"></i>
+                <i class="fa-brands fa-node-js" style="color: #09b228;"></i>
                 <img src="https://upload.wikimedia.org/wikipedia/commons/1/17/GraphQL_Logo.svg" alt="GraphQL" width="20"
                   height="20" />
               </div>
@@ -611,11 +611,11 @@
                 pharmacies to the largest hospital ecosystems. <i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <div class="d-flex">
-                <img class="postman" src="assets/img/portfolio/mongodb.png" style="color: #09b228;" alt=""> +
+                <img class="postman" src="assets/img/portfolio/mongodb.png" style="color: #09b228;" alt="">
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/express.svg" alt="Express.js" width="20"
-                  height="20" style="background-color: #fff;" />+
-                <i class="fa-brands fa-angular" style="color:  #e63232;"></i> +
-                <i class="fa-brands fa-node-js" style="color: #09b228;"></i> +
+                  height="20" style="background-color: #fff;" />
+                <i class="fa-brands fa-angular" style="color:  #e63232;"></i>
+                <i class="fa-brands fa-node-js" style="color: #09b228;"></i>
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/amazons3.svg" alt="AWS S3" width="15"
                   height="15" style="filter: invert(36%) sepia(92%) saturate(749%) hue-rotate(13deg);" />
               </div>
@@ -632,8 +632,8 @@
                 Chatbot need to be integerated<i class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <div class="d-flex">
-                <i class="fa-brands fa-wordpress"></i> +
-                <i class="fa-brands fa-php" style="color: #14aae6;"></i> +
+                <i class="fa-brands fa-wordpress"></i>
+                <i class="fa-brands fa-php" style="color: #14aae6;"></i>
                 <i class="fa-brands fa-js" style="color: #e3e614;"></i>
               </div>
 
@@ -645,16 +645,15 @@
             <div class="projects-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                A Website focuses on the Women Health Care with combine compassionate, patient-centered care with
-                innovative fertility treatments to help individuals and couples overcome their fertility challenges.<i
+                A Website focuses on B2B pharmaceutical drugs selling to Hospitals & Pharmacies<i
                   class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <div class="d-flex">
-                <img class="postman" src="assets/img/portfolio/mongodb.png" style="color: #09b228;" alt="">+
+                <img class="postman" src="assets/img/portfolio/mongodb.png" style="color: #09b228;" alt=""
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/express.svg" alt="Express.js" width="20"
-                  height="20" style="background-color: #fff;" />+
+                  height="20" style="background-color: #fff;" /
                 <img src="https://assets.vercel.com/image/upload/v1662130559/nextjs/Icon_light_background.png"
-                  alt="Next.js" width="20" height="20" /> +
+                  alt="Next.js" width="20" height="20" />
                 <i class="fa-brands fa-node-js" style="color: #09b228;"></i>
               </div>
 
@@ -666,8 +665,8 @@
             <div class="projects-item">
               <p>
                 <i class="bx bxs-quote-alt-left quote-icon-left"></i>
-                A Website focuses on the Women Health Care with combine compassionate, patient-centered care with
-                innovative fertility treatments to help individuals and couples overcome their fertility challenges.<i
+                A Website focuses on the Women Beauty care products with no additive of chemically process products ,
+                providing Anti-allergic & natual skin friendly products.<i
                   class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <div class="d-flex">
