enhence ui of portfolio

--- a/index.html
+++ b/index.html
@@ -649,14 +649,13 @@
                   class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <div class="d-flex">
-                <img class="postman" src="assets/img/portfolio/mongodb.png" style="color: #09b228;" alt=""
+                <img class="postman" src="assets/img/portfolio/mongodb.png" style="color: #09b228;" alt="">
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/express.svg" alt="Express.js" width="20"
-                  height="20" style="background-color: #fff;" /
+                  height="20" style="background-color: #fff;" />
                 <img src="https://assets.vercel.com/image/upload/v1662130559/nextjs/Icon_light_background.png"
                   alt="Next.js" width="20" height="20" />
                 <i class="fa-brands fa-node-js" style="color: #09b228;"></i>
               </div>
-
               <h3>Curigen Pharmaceuticals LLP</h3>
               <h4>A B2B website for selling Pharmaceutical Drugs</h4>
             </div>
@@ -670,11 +669,11 @@
                   class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <div class="d-flex">
-                <img class="postman" src="assets/img/portfolio/mongodb.png" style="color: #09b228;" alt="">+
+                <img class="postman" src="assets/img/portfolio/mongodb.png" style="color: #09b228;" alt="">
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/express.svg" alt="Express.js" width="20"
-                  height="20" style="background-color: #fff;" />+
+                  height="20" style="background-color: #fff;" />
                 <img src="https://assets.vercel.com/image/upload/v1662130559/nextjs/Icon_light_background.png"
-                  alt="Next.js" width="20" height="20" /> +
+                  alt="Next.js" width="20" height="20" />
                 <i class="fa-brands fa-node-js" style="color: #09b228;"></i>
               </div>
 
@@ -691,10 +690,10 @@
                   class="bx bxs-quote-alt-right quote-icon-right"></i>
               </p>
               <div class="d-flex">
-                <img class="postman" src="assets/img/portfolio/mongodb.png" style="color: #09b228;" alt=""> +
+                <img class="postman" src="assets/img/portfolio/mongodb.png" style="color: #09b228;" alt="">
                 <img src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/express.svg" alt="Express.js" width="20"
-                  height="20" style="background-color: #fff;" />+
-                <i class="fa-brands fa-angular" style="color:  #e63232;"></i> +
+                  height="20" style="background-color: #fff;" />
+                <i class="fa-brands fa-angular" style="color:  #e63232;"></i>
                 <i class="fa-brands fa-node-js" style="color: #09b228;"></i>
               </div>
 
