enhence ui of portfolio

--- a/index.html
+++ b/index.html
@@ -737,10 +737,14 @@
           <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
             <h4>Praveen Srivastav</h4>
-            <p><em>To leverage my extensive knowledge and skills in the field of Information Technology to drive
-                innovation,
-                optimize processes, and achieve the company's goals. Previously worked as a Laravel Developer and now
-                want to explore my skills in the Full-Stack part by seeking to work as MEAN stack Developer </em></p>
+           <p>
+           Graduated from a Non-IT background but successfully transitioned into software development from the past 2.5
+            years.
+           </p> 
+            <p><em> Started my career as a Laravel Developer and now specialize in modern full-stack technologies
+            including MEAN Stack, MERN Stack, and Next.js.</em></p>
+            <p><em>Hands-on experience, been Project Team Lead, delivering client projects across multiple technology stacks while continuously
+                upskilling.</em></p> 
             <p>
             <ul>
               <li>312,313 Trupti Nagar, Pandesara, Surat</li>
@@ -805,7 +809,7 @@
             <ul>
               <li>Along with MEAN Stack also Work as Project Team Lead of HIMS Phase 1</li>
               <li>Handle Client Calls & deliver on visit Product Demo as well </li>
-              <li>Also ensuring the distirbuted TeamWork & smooth co-ordination with Upper Management</li>
+              <li>Also ensuring the distirbuted Teamwork & smooth co-ordination with Upper Management</li>
             </ul>
             </p>
           </div>
