enhence Resume Section

--- a/index.html
+++ b/index.html
@@ -737,14 +737,16 @@
           <h3 class="resume-title">Summary</h3>
           <div class="resume-item pb-0">
             <h4>Praveen Srivastav</h4>
-           <p>
-           Graduated from a Non-IT background but successfully transitioned into software development from the past 2.5
-            years.
-           </p> 
+            <p>
+              Graduated from a Non-IT background but successfully transitioned into software development from the past
+              2.5
+              years.
+            </p>
             <p><em> Started my career as a Laravel Developer and now specialize in modern full-stack technologies
-            including MEAN Stack, MERN Stack, and Next.js.</em></p>
-            <p><em>Hands-on experience, been Project Team Lead, delivering client projects across multiple technology stacks while continuously
-                upskilling.</em></p> 
+                including MEAN Stack, MERN Stack, and Next.js.</em></p>
+            <p><em>Hands-on experience, been Project Team Lead, delivering client projects across multiple technology
+                stacks while continuously
+                upskilling.</em></p>
             <p>
             <ul>
               <li>312,313 Trupti Nagar, Pandesara, Surat</li>
@@ -786,6 +788,20 @@
               <li>Within the 1 month of Training went to Live Product </li>
               <li>Build the whole portal of Stock Part of the Import Export App using Laravel as Backend and MySql to
                 store data </li>
+            </ul>
+            </p>
+          </div>
+          <div class="resume-item">
+            <h4>Angular Developer Tutor</h4>
+            <h5>October2022 - October2024</h5>
+            <p><em>Experience: 2yrs, Oscar Carrer Point</em></p>
+            <p>
+            <ul>
+              <li>For the first six months, learned basic courses including JavaScript and jQuery, then gained expertise
+                in Angular and Node.js.</li>
+              <li>Later, taught students who wanted to pursue MEAN stack courses.</li>
+              <li>During that period, provided industry-based expertise and logic-building guidance to students using my
+                past job experience.</li>
             </ul>
             </p>
           </div>
