--- a/index.html
+++ b/index.html
@@ -72,15 +72,15 @@
   <!-- End Header -->
 
   <!-- ======= About Section ======= -->
-  <section id="about" class="about">
+  <section id="about" class="about section-show">
 
     <!-- ======= About Me ======= -->
     <div class="about-me container">
 
-      <div class="section-title">
-        <h2>About</h2>
-        <p>Learn more about me</p>
-      </div>
+        <div class="section-title">
+          <h2>About</h2>
+          <p>Learn more about me</p>
+        </div>
 
       <div class="row">
         <div class="col-lg-4" data-aos="fade-right">
@@ -721,7 +721,7 @@
 
 
   </section>
-  <!-- End About Section -->
+  <!-- End   About Section -->
 
   <!-- ======= Resume Section ======= -->
   <section id="resume" class="resume">
